# norms-k-calibration

./: .gitignore  README.md  config.py  mentor_report.tex  paper.md  paper.tex  paper_mi.md  pyproject.toml  references.bib  requirements.txt  run_all.sh  setup.sh
activation_baking/: __init__.py  baker.py  calibrator.py  evaluator.py  extractor.py  model_utils.py  pca_director.py
avaw/: README.md
config/: experiments.yml  models.yml
data/behaviors/: formality.jsonl  refusal_calibration.jsonl  sycophancy_suppression.jsonl  uncertainty_expression.jsonl  verbosity_control.jsonl
experiments/: 01_norm_profiling.py  02_contrastive_extraction.py  03_k_calibration_validation.py  04_permutation_invariance.py  05_baking_efficacy.py  06_weight_space_alignment.py  07_cross_arch_comparison.py  07_generate_figures.py  08_directional_fidelity_analysis.py  08_raw_activation_control.py  09_gemma_postnorm_analysis.py  09_partial_correlation_analysis.py  10_downstream_behavioral_eval.py  10_downstream_eval.py  E4_weight_alignment_v2.py  E5_permutation_invariance_v2.py  E7_k_sensitivity_curve.py
results/directional_fidelity/: aggregate_table.csv  gain_table.csv  latex_table.tex
results/downstream_eval/: aggregate_downstream.csv
results/gemma_postnorm/: gemma_correlations.json  gemma_per_layer.csv
results/k_calibration/: gemma_correlation.json  gemma_k_vs_spectral.csv  llama_correlation.json  llama_k_vs_spectral.csv  mistral_correlation.json  mistral_k_vs_spectral.csv  qwen_correlation.json  qwen_k_vs_spectral.csv
scripts/: generate_pairs.py
tests/: conftest.py
(+212 files in other folders)
