[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "norms-k-calibration"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "transformers>=4.44",
    "scikit-learn",
    "safetensors",
    "scipy",
    "pandas",
    "tqdm",
    "huggingface-hub",
]

[tool.setuptools.packages.find]
include = ["activation_baking*"]
