[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "norms-k-calibration"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "transformers>=4.44",
    "scikit-learn",
    "safetensors",
    "scipy",
    "pandas",
    "tqdm",
    "huggingface-hub",
]

[tool.setuptools.packages.find]
include = ["activation_baking*"]
